New endpoints added. Swag updated.
